--- a/src/styles/UserPosts.css
+++ b/src/styles/UserPosts.css
@@ -6,34 +6,44 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 20px;
 }
 
-.post-card {
+.each-post-card {
   width: calc(33.33% - 20px);
-  /* Adjust the width based on your layout preference */
   padding: 15px;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   box-sizing: border-box;
+  overflow: hidden;
+
 }
 
-.post-card h4 {
+.each-post-card h4 {
   font-size: 16px;
   margin-bottom: 10px;
+  overflow: hidden;
 }
 
-.post-card p {
+.each-post-card p {
   font-size: 14px;
   color: #555;
+  overflow: hidden;
 }
 
-/* UserDetail.css */
-.user-details-container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
+/* Media query for small screens */
+@media (max-width: 768px) {
+  .post-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .each-post-card {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 
 button {
@@ -49,5 +59,3 @@ button {
 button:hover {
   background-color: #0056b3;
 }
-
-/* Add other styling for Clock and BasicDetails components as needed */
